# council-sdk

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
connector-python/: README.md  pyproject.toml
connector-python/council_connector_sdk/: __init__.py  define_connector.py  testing.py  types.py
connector-python/tests/: test_define_connector.py  test_testing.py
connector-typescript/: README.md  package-lock.json  package.json  tsconfig.json
connector-typescript/src/: define-connector.ts  index.ts  testing.ts  types.ts
connector-typescript/tests/: define-connector.test.ts  testing.test.ts
docs-site/: .dockerignore  Dockerfile  docusaurus.config.ts  nginx.conf  package-lock.json
docs-site/blog/: 2026-02-22-introducing-council-os.md  authors.yml
docs-site/src/components/HomepageFeatures/: index.tsx
docs-site/src/css/: custom.css
docs-site/src/pages/: index.tsx
python/: README.md  setup.py
python/council-sdk/: README.md  pyproject.toml
python/council-sdk/council/: __init__.py  agents.py  audit.py  auth.py  client.py  command.py  containment.py  errors.py  fleet.py  jury.py  safety.py  sandbox.py  streaming.py  testing.py  transport.py  types.py
python/council-sdk/council/integrations/: __init__.py  langchain.py  llamaindex.py
python/council-sdk/tests/: __init__.py  conftest.py  test_sdk.py  test_trust_compliance.py
python/council_robotics/: __init__.py  client.py  commands.py  corrections.py  robot.py  ros2_bridge.py  telemetry.py
python/examples/: agent_deliberation.py  basic_connection.py  panda_integration.py  ur5e_integration.py
typescript/: README.md  package-lock.json  package.json
typescript/src/: auth.ts  client.ts  errors.ts  index.ts  testing.ts  transport.ts  types.ts
typescript/src/integrations/: vercel-ai.ts
typescript/src/namespaces/: agents.ts  audit.ts  command.ts  containment.ts  fleet.ts  jury.ts  safety.ts  sandbox.ts  streaming.ts
typescript/tests/: command.test.ts  safety.test.ts  sdk.test.ts
